; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/dm/extr_bta_dm_act.c_bta_dm_rs_cback.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/dm/extr_bta_dm_act.c_bta_dm_rs_cback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [19 x i8] c"bta_dm_rs_cback:%d\00", align 1
@bta_dm_cb = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@BTA_DM_API_SEARCH_EVT = common dso_local global i64 0, align 8
@BTA_DM_RS_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @bta_dm_rs_cback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bta_dm_rs_cback(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32 @UNUSED(i32* %3)
  %5 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @bta_dm_cb, i32 0, i32 0), align 8
  %6 = call i32 @APPL_TRACE_WARNING(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i64 %5)
  %7 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @bta_dm_cb, i32 0, i32 0), align 8
  %8 = load i64, i64* @BTA_DM_API_SEARCH_EVT, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i32, i32* @BTA_DM_RS_OK, align 4
  store i32 %11, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @bta_dm_cb, i32 0, i32 1, i32 0), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @bta_dm_cb, i32 0, i32 0), align 8
  %12 = call i32 @bta_dm_search_start(i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @bta_dm_cb, i32 0, i32 1, i32 0))
  br label %13

13:                                               ; preds = %10, %1
  ret void
}

declare dso_local i32 @UNUSED(i32*) #1

declare dso_local i32 @APPL_TRACE_WARNING(i8*, i64) #1

declare dso_local i32 @bta_dm_search_start(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
